# ImageCodingUtils

./: CMakeLists.txt  README.md
cmake/: VppConfig.cmake.in
include/CodecUtils/: AdvancedIntraDctQuantiserImpl.h  AdvancedIntraDctQuantiserImplLookUp.h  AdvancedIntraModeH263VlcDecoder.h  AdvancedIntraModeH263VlcEncoder.h  BitStreamBase.h  BitStreamBaseMSB.h  BitStreamReaderMSB.h  BitStreamWriter.h  BitStreamWriterMSB.h  BlockH263.h  BlockH264.h  CAVLCH264Impl.h  CodecDistortionDef.h  ColourPlaneDecoding.h  ColourPlaneEncoding.h  DQuantH263VlcDecoder.h  DQuantH263VlcEncoder.h  DualMotionVectorTypeStruct.h  ExpGolombUnsignedVlcEncoder.h  FastForward4x4ITImpl1.h  FastForward4x4ITImpl2.h  FastForward4x4On16x16ITImpl1.h  FastForwardDC2x2ITImpl1.h  FastForwardDC4x4ITImpl1.h  FastForwardDctImpl1.h  FastForwardDctImpl2.h  FastInterLastRunLevelH263VlcEncoder.h  FastIntraLastRunLevelH263VlcEncoder.h  FastInverseDctImpl1.h  FastInverseDctImplZDet.h  FastInverseDctImplZDet2.h  FastMotionVectorVlcDecoderImpl1.h  FastMotionVectorVlcDecoderImpl2.h  FastRunLengthVlcDecoderImpl1.h  FastRunLengthVlcDecoderImpl2.h  FastVectorQuantiserVlcDecoderImpl1.h  FastVectorQuantiserVlcDecoderImpl2.h  H264MotionVectorPredictorImpl1.h  IBitStreamReader.h  IBitStreamWriter.h  (+98 more)
include/GeneralUtils/: DataProfileImplBase.h  DataProfileImplCongest.h  DataProfileImplRandom.h  DataProfileImplSetQ8Intra.h  Fifo.h  IDataProfile.h  LinearModel.h  MeasurementTable.h  StringTokeniser.h
include/ImageUtils/: AutoCrop.h  AviFile.h  AviFileHandler.h  AviFileHandlerNET.h  AviFileHandlerUsingCImage.h  Block.h  BlockMotionVector.h  BlockPatternConstants.h  BlockPatternVlcEncoder.h  CImage.h  Codec.h  CropUtil.h  Dct2dodd.h  DwtQnt.h  Dwtcodec.h  EncBlockMotionVector.h  EncMotionFactory.h  EncMotionVector.h  EncMotionVectorPattern.h  ExtMem2D.h  ExtMemBlock2D.h  Fast6BitYUV420toRGB24Converter.h  Fast6BitYUV420toRGB24ZoomConverter.h  FastYUV420toInvRGB12Converter.h  FastYUV420toInvRGB16Converter.h  FastYUV420toInvRGB24Converter.h  FastYUV420toInvRGB32Converter.h  FastYUV420toInvRGB32Converter_ByteWrite.h  FastYUV420toRGB16Converter.h  FastYUV420toRGB24Converter.h  FastYUV420toRGB24ZoomConverter.h  FastYUV420toRGB32Converter.h  FastYUV420toRGB32Converter_ByteWrite.h  FastYUV420toRGBConverter.h  Graph.h  H263Codec.h  IExistance.h  IMotionFactory.h  ImageDefs.h  ImageHandler.h  (+38 more)
src/: CMakeLists.txt  stdafx.cpp  stdafx.h
src/CodecUtils/: AdvancedIntraDctQuantiserImpl.cpp  AdvancedIntraDctQuantiserImplLookUp.cpp  AdvancedIntraModeH263VlcDecoder.cpp  AdvancedIntraModeH263VlcEncoder.cpp  BitStreamReader.cpp  BitStreamWriterMSB.cpp  BlockH263.cpp  BlockH264.cpp  CMakeLists.txt  ColourPlaneDecoding.cpp  ColourPlaneEncoding.cpp  DQuantH263VlcDecoder.cpp  DQuantH263VlcEncoder.cpp  ExpGolombUnsignedVlcEncoder.cpp  FastForward4x4ITImpl2.cpp  FastForwardDC4x4ITImpl1.cpp  FastForwardDctImpl1.cpp  FastForwardDctImpl2.cpp  FastInterLastRunLevelH263VlcEncoder.cpp  FastIntraLastRunLevelH263VlcEncoder.cpp  FastInverseDctImpl1.cpp  FastInverseDctImplZDet.cpp  FastInverseDctImplZDet2.cpp  FastMotionVectorVlcDecoderImpl1.cpp  FastMotionVectorVlcDecoderImpl2.cpp  FastRunLengthVlcDecoderImpl1.cpp  FastRunLengthVlcDecoderImpl2.cpp  FastVectorQuantiserVlcDecoderImpl1.cpp  FastVectorQuantiserVlcDecoderImpl2.cpp  ImagePlaneDecoder.cpp  ImagePlaneDecoderIntraImpl.cpp  ImagePlaneDecoderStdImpl.cpp  ImagePlaneEncoder.cpp  ImagePlaneEncoderConstQImpl.cpp  ImagePlaneEncoderFastImpl1.cpp  ImagePlaneEncoderFastImpl2.cpp  ImagePlaneEncoderIntraImpl.cpp  ImagePlaneEncoderStdImpl.cpp  InterPCBPYH263VlcDecoder.cpp  InterPCBPYH263VlcEncoder.cpp  (+72 more)
src/GeneralUtils/: CMakeLists.txt  DataProfileImplBase.cpp  DataProfileImplCongest.cpp  DataProfileImplRandom.cpp  DataProfileImplSetQ8Intra.cpp  LinearModel.cpp
src/ImageUtils/: AutoCrop.cpp  AviFile.cpp  AviFileHandler.cpp  AviFileHandlerNET.cpp  AviFileHandlerUsingCImage.cpp  BlockMotionVector.cpp  BlockPatternVlcEncoder.cpp  CImage.cpp  CMakeLists.txt  Dct2dodd.cpp  DwtQnt.cpp  Dwtcodec.cpp  EncBlockMotionVector.cpp  EncMotionFactory.cpp  EncMotionVector.cpp  EncMotionVectorPattern.cpp  ExtMem2D.cpp  ExtMemBlock2D.cpp  Fast6BitYUV420toRGB24Converter.cpp  Fast6BitYUV420toRGB24ZoomConverter.cpp  FastYUV420toInvRGB12Converter.cpp  FastYUV420toInvRGB16Converter.cpp  FastYUV420toInvRGB24Converter.cpp  FastYUV420toInvRGB32Converter.cpp  FastYUV420toInvRGB32Converter_ByteWrite.cpp  FastYUV420toRGB16Converter.cpp  FastYUV420toRGB24Converter.cpp  FastYUV420toRGB24ZoomConverter.cpp  FastYUV420toRGB32Converter.cpp  FastYUV420toRGB32Converter_ByteWrite.cpp  Graph.cpp  H263Codec.cpp  ImageHandler.cpp  ImageHandlerNET.cpp  ImageHandlerV2.cpp  ImageObjectHandler.cpp  ImgCodec.cpp  ImgSmp.cpp  Mem2D.cpp  MemBlock2D.cpp  (+28 more)
